--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,7 +75,7 @@ jobs:
 
       - name: Push To Itch
         run: |
-          ./butler push ./exports/html/$PROJECT_NAME-html.zip $ITCHIO_USERNAME/$PROJECT_NAME:html
-          ./butler push ./exports/$PROJECT_NAME-linux.zip $ITCHIO_USERNAME/$PROJECT_NAME:linux
-          ./butler push ./exports/$PROJECT_NAME-macos.zip $ITCHIO_USERNAME/$PROJECT_NAME:mac
-          ./butler push ./exports/$PROJECT_NAME-windows.exe $ITCHIO_USERNAME/$PROJECT_NAME:windows
+          ./butler push ./exports/html/${{PROJECT_NAME}}-html.zip $ITCHIO_USERNAME/$PROJECT_NAME:html
+          ./butler push ./exports/${{PROJECT_NAME}}-linux.zip $ITCHIO_USERNAME/$PROJECT_NAME:linux
+          ./butler push ./exports/${{PROJECT_NAME}}-macos.zip $ITCHIO_USERNAME/$PROJECT_NAME:mac
+          ./butler push ./exports/${{PROJECT_NAME}}-windows.exe $ITCHIO_USERNAME/$PROJECT_NAME:windows
