--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,10 +28,8 @@ jobs:
           echo "VERSION=$VERSION" >> $GITHUB_ENV
           echo "::set-output name=version::$VERSION"
 
-      - name: Extract Godot Version
-        run: |
-          VERSION=$(grep '^config/version=' project.godot | cut -d '"' -f 2)
-          echo "GODOT_VERSION=$VERSION" >> $GITHUB_ENV
+      - name: Get Godot Version
+        run: echo "GODOT_VERSION=$(grep '^config/features' project.godot | cut -d "\"" -f 2)" >> $GITHUB_ENV
 
       - name: Export Godot Project
         uses: firebelley/godot-export@v7.0.0
