--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -81,6 +81,7 @@ application/file_description=""
 application/copyright=""
 application/trademarks=""
 application/export_angle=0
+application/subsystem=0
 ssh_remote_deploy/enabled=false
 ssh_remote_deploy/host="user@host_ip"
 ssh_remote_deploy/port="22"
