--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="res://globals/default_state.txt"
 exclude_filter=""
 export_path="exports/html/index.html"
 patches=PackedStringArray()
@@ -53,7 +53,7 @@ advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="res://globals/default_state.txt"
 exclude_filter=""
 export_path="exports/potion-profits-windows.exe"
 patches=PackedStringArray()
@@ -125,7 +125,7 @@ advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="res://globals/default_state.txt"
 exclude_filter=""
 export_path="exports/potion-profits-linux.zip"
 patches=PackedStringArray()
@@ -172,7 +172,7 @@ advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="res://globals/default_state.txt"
 exclude_filter=""
 export_path="exports/potion-profits-macos.zip"
 patches=PackedStringArray()
